k8s/services/restaurant-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: webstaurator
spec:
  selector:
    app: restaurant-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
